# xpress_demultiplexed_fastq

./: .gitignore  Cargo.toml  README.md  README_CN.html  README_CN.md  create_test_data.py  samplesheet.csv  test_output_parallel.R1.fastq  test_output_parallel.R2.fastq
src/: args.rs  io_utils.rs  main.rs  matcher.rs  pipeline.rs  samplesheet.rs
test_input/: test_L01_11_1.fq  test_L01_11_2.fq
