[package]
name = "fastq_merger"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
bio = "1.3"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
csv = "1.3"
regex = "1.10"
walkdir = "2.4"
rayon = "1.11.0"
indicatif = "0.17"
crossbeam-channel = "0.5"
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
